--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mypoi" >
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    package="com.example.mypoi">
 
     <application
         android:allowBackup="true"
@@ -10,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyPOI" >
-        <activity android:name=".ModificaCategorieActivity" >
-        </activity>
+        android:theme="@style/Theme.MyPOI">
+        <activity android:name=".AggiungiCategoria"></activity>
+        <activity android:name=".AggiungiCategorie" />
+        <activity android:name=".ModificaCategorieActivity" />
         <activity android:name=".ModificaPOI" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -25,7 +24,7 @@
         <activity
             android:name=".Activity_registra_POI"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,5 +36,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
