--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mypoi">
 
     <application
@@ -10,17 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPOI">
         <activity android:name=".AggiungiCategoria"></activity>
-        <activity android:name=".AggiungiCategorie" />
-        <activity android:name=".ModificaCategorieActivity" />
         <activity android:name=".ModificaPOI" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <activity
             android:name=".Activity_registra_POI"
             android:parentActivityName=".MainActivity" />
@@ -30,6 +21,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ModificaCategorieActivity"
+            android:parentActivityName=".MainActivity">
         </activity>
 
         <meta-data
