--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPOI">
-        <activity android:name=".AggiungiCategoria"></activity>
+
+        <activity
+            android:name=".MapShowPosizione"
+            android:parentActivityName=".MainActivity"
+            android:label="Posizione selezionata"></activity>
+
+        <activity android:name=".AggiungiCategoria" />
         <activity android:name=".ModificaPOI" />
         <activity
             android:name=".Activity_registra_POI"
@@ -22,12 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ModificaCategorieActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
-
+            android:parentActivityName=".MainActivity" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
